# server/src/B1ngo.Application.Features/Rooms/CreateRoom/CreateRoomResponse.cs
@@ -1,3 +1,10 @@
+using System.Text.Json.Serialization;
+
 namespace B1ngo.Application.Features.Rooms.CreateRoom;
 
-public sealed record CreateRoomResponse(Guid RoomId, string JoinCode, Guid PlayerId, Guid PlayerToken);
+public sealed record CreateRoomResponse(
+    Guid RoomId,
+    string JoinCode,
+    Guid PlayerId,
+    [property: JsonIgnore] Guid PlayerToken
+);
