# server/src/B1ngo.Web/Constants/CookieNames.cs
@@ -1,0 +1,6 @@
+namespace B1ngo.Web.Constants;
+
+internal static class CookieNames
+{
+    public const string PlayerToken = "__bng_s";
+}
